Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Use a custom guard for boxes. DCWorkflow's one couldn't be used. This guard is
  still compatible, it just has a specific name space.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- css improve default fonts family for Mac and *nix