@@ -1,7 +1,11 @@
 ##parameters=mtool=None, base_url=None, context_url=None
 ##
 # $Id$
-""" get Merged Local Roles filtering non CPS Roles. """
+""" get Merged Local Roles filtering non CPS Roles.
+
+Returns a tuple dict_roles, editable_users, cps_roles, local_roles_blocked
+
+"""
 
 if mtool is None:
     mtool = context.portal_membership
@@ -15,15 +19,21 @@ if context_url is None:
 # Get the list of Roles from the tool
 dict_roles = mtool.getMergedLocalRolesWithPath(context)
 
-# Filter remove non CPS roles
+# Filter remove special roles
+local_roles_blocked = 0
 for user in dict_roles.keys():
     for item in dict_roles[user]:
-        item['roles'] = [x for x in item['roles'] if x not in ('Owner',
-                                                               'Member'
-                                                               )]
-    dict_roles[user] = [x for x in dict_roles[user] if len(x['roles'])]
+        roles = item['roles']
+        roles = [r for r in roles if r not in ('Owner', 'Member')]
+        if user == 'group:role:Anonymous' and '-' in roles:
+            roles = [r for r in roles if r != '-']
+            if base_url+item['url'] == context_url:
+                local_roles_blocked = 1
+        item['roles'] = roles
 
-    if not len(dict_roles[user]):
+    dict_roles[user] = [x for x in dict_roles[user] if x['roles']]
+
+    if not dict_roles[user]:
         del dict_roles[user]
 
 #find editable user with local roles defined in the context
@@ -56,4 +66,4 @@ elif context.portal_type == "Workspace":
 else:
     cps_roles = cps_roles
 
-return dict_roles, editable_users, cps_roles
+return dict_roles, editable_users, cps_roles, local_roles_blocked
