@@ -3,7 +3,10 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- Local roles blocking when the userfolder supports it (currently
+  basic UserFolderWithGroups only). The UI only deals with simple
+  on/off blocking of acquisition for now (using role '-' for
+  group:role:Anonymous).
 Bug fixes:
 ~~~~~~~~~~
 - Use a custom guard for boxes. DCWorkflow's one couldn't be used. This guard is
